Added player class, blueprintgamemode

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -13,8 +13,9 @@ bSupportsLandscapeLeftOrientation=True
 PreferredLandscapeOrientation=LandscapeLeft
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Map.Map
-GameDefaultMap=/Game/Map.Map
+EditorStartupMap=/Game/Maps/DefaultLevel.DefaultLevel
+GameDefaultMap=/Game/Maps/DefaultLevel.DefaultLevel
+GlobalDefaultGameMode=/Game/Blueprints/BP_StreetGameMode.BP_StreetGameMode_C
 
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
