Added EndTraceOverlap on Enemy

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -13,7 +13,7 @@ bSupportsLandscapeLeftOrientation=True
 PreferredLandscapeOrientation=LandscapeLeft
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Maps/DefaultLevel.DefaultLevel
+EditorStartupMap=/Game/Maps/GrayboxLevel.GrayboxLevel
 GameDefaultMap=/Game/Maps/DefaultLevel.DefaultLevel
 GlobalDefaultGameMode=/Game/Blueprints/BP_StreetGameMode.BP_StreetGameMode_C
 
