starting work on physics
- houses and stuff as well

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -13,8 +13,8 @@ bSupportsLandscapeLeftOrientation=True
 PreferredLandscapeOrientation=LandscapeLeft
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Maps/DefaultLevel.DefaultLevel
-GameDefaultMap=/Game/Maps/DefaultLevel.DefaultLevel
+EditorStartupMap=/Game/Maps/TrueLevel.TrueLevel
+GameDefaultMap=/Game/Maps/TrueLevel.TrueLevel
 GlobalDefaultGameMode=/Game/Blueprints/BP_StreetGameMode.BP_StreetGameMode_C
 
 [/Script/Engine.CollisionProfile]
