Last Changes from jonas

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -14,7 +14,7 @@ PreferredLandscapeOrientation=LandscapeLeft
 
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/Maps/TrueLevel.TrueLevel
-GameDefaultMap=/Game/Maps/TrueLevel.TrueLevel
+GameDefaultMap=/Game/Maps/MainMenu.MainMenu
 
 GlobalDefaultGameMode=/Game/Blueprints/BP_StreetGameMode.BP_StreetGameMode_C
 
